--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+@layer base {
+  body {
+    font-family: 'Roboto Mono', 'Menlo', 'monospace';
+  }
+}
